feat: enterprise audit fixes, SEO metadata, custom 404, GTM integration
- Add per-page metadata with server/client component split (about, quiz, leaderboard, mechanics)
- Add generateMetadata to dynamic routes (quiz/[categoryId], results)
- Add JSON-LD structured data (WebSite schema) to root layout
- Add Google Tag Manager (G-8777S9SP9X) with CSP whitelist
- Add quiz category URLs to sitemap
- Add custom 404 page with Framer Motion animations and recovery actions
- Add canvas resize handler to ConfettiEffect
- Add aria-expanded to QuestionReview accordion buttons
- Add type=button to Header mobile menu toggle
- Fix CSS backdrop-filter property ordering
- Configure .htaccess with security headers, CSP, rewrite rules, and LiteSpeed 404 fallback
- Update README with project structure, deployment guide, and current feature set

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,13 +6,26 @@
   Header set X-Content-Type-Options "nosniff"
   Header set Referrer-Policy "origin-when-cross-origin"
   Header set Permissions-Policy "camera=(), microphone=(), geolocation=(), interest-cohort=()"
+  Header set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://www.google-analytics.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://www.google-analytics.com https://www.googletagmanager.com; font-src 'self' data:; connect-src 'self' https://www.google-analytics.com https://analytics.google.com https://www.googletagmanager.com; frame-ancestors 'self'"
 </IfModule>
 
-<IfModule mod_rewrite.c>
-  RewriteEngine On
-  RewriteBase /
-  RewriteRule ^index\.html$ - [L]
-  RewriteCond %{REQUEST_FILENAME} !-f
-  RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteRule . /index.html [L]
-</IfModule>
+RewriteEngine On
+RewriteBase /
+
+# Serve existing files directly
+RewriteCond %{REQUEST_FILENAME} -f
+RewriteRule ^ - [L]
+
+# Serve existing directories with index.html
+RewriteCond %{REQUEST_FILENAME} -d
+RewriteRule ^ - [L]
+
+# If a trailing-slash index.html exists for this path, serve it
+RewriteCond %{DOCUMENT_ROOT}/$1/index.html -f
+RewriteRule ^(.+?)/?$ /$1/index.html [L]
+
+# Everything else: serve the custom 404 page
+RewriteRule ^ /404/index.html [L]
+
+# ErrorDocument using absolute URL forces LiteSpeed to use our page
+ErrorDocument 404 /404.html
